[package]
name = "portfolio-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "^0.5.0-rc.2", features = [
  "json",
  "secrets",
] }

async-stream = { version = "^0.3" }
async-trait = { version = "0.1" }
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
tokio = "^1.21"

dotenv = "^0.15"

serde_json = { version = "^1.0" }

chrono = "^0.4"

portfolio-entity = { path = "../entity" }
portfolio-migration = { path = "../migration" }
portfolio-core = { path = "../core" }

[dependencies.sea-orm-rocket]
version = "^0.5"


[dev-dependencies]
once_cell = "1.9.0"