[package]
name = "portfolio-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = "^0.4"

portfolio-entity = { path = "../entity" }

# serde
serde = { version = "^1.0", features = ["derive"] }

# csv
csv = "1.1"

# error

thiserror = "^1.0"

# env
dotenv = "^0.15"

# async
tokio = "^1.21"
futures = "^0.3"
async-compat = "^0.2"

# file identifier
infer = "^0.11"

async_zip = "0.0.9"

# crypto
rand = "^0.8"
aes-gcm-siv = { version = "^0.11", features = ["std"] }
argon2 = { version = "^0.4", features = ["std"] }
age =  { version = "^0.9", features = ["async"] }
secrecy = { version = "^0.8" }
base64 = "^0.13"

[dependencies.sea-orm]
version = "^0.10"
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "^1.21", features = ["macros"] }
async-tempfile = "^0.2"
serial_test = "0.9.0"