[package]
name = "portfolio-core"
version = "2.0.0"
edition = "2021"
publish = false

[dependencies]
chrono = "^0.4"

portfolio-entity = { path = "../entity" }

# serde
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"

validator = { version = "^0.16", features = ["derive"] }

# csv
csv = "^1.2"

async-trait = "^0.1"

# error
thiserror = "^1.0"

# env
dotenv = "^0.15"

# async
tokio = "^1.26"
futures = "^0.3"
async-compat = "^0.2"

# file identifier
infer = "^0.13"

async_zip = {version = "0.0.12", features = ["deflate"]}

# crypto
rand = "^0.8"
aes-gcm-siv = { version = "^0.11", features = ["std"] }
argon2 = { version = "^0.5", features = ["std"] }
age =  { version = "^0.9", features = ["async"] }
secrecy = { version = "^0.8" }
base64 = "^0.21"
uuid = { version = "^1.3", features = ["v4"] }

# logging
log = "^0.4"
fern = "^0.6"

[dependencies.sea-orm]
version = "^0.11"
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "sqlx-sqlite",
]

[dev-dependencies]
tokio = { version = "^1.26", features = ["macros"] }
async-tempfile = "^0.2"
serial_test = "^1.0"
once_cell = "^1.17" 
