[package]
name = "portfolio-migration"
version = "2.0.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "^1.24", features = ["macros"] }

serde = { version = "^1.0", features = ["derive"] }
chrono = "^0.4"
portfolio-entity = { path = "../entity" }

[dependencies.sea-orm-migration]
version = "^0.10"
features = [ "runtime-tokio-native-tls", "sqlx-postgres", "sqlx-sqlite"]